--- a/layout/index.html
+++ b/layout/index.html
@@ -13,7 +13,7 @@
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/docs.min.css" rel="stylesheet">
     <link href="../assets/css/prism.css" rel="stylesheet">
-
+   
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon_114.png">
@@ -82,7 +82,7 @@
     <div class="bs-header bgs3" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://hyunjin912.github.io/Save/index.html" target="_blank">hyunjin912.github.io/Save/index.html</a></p>
+            <p><a href="https://hyunjin912.github.io/portfolio/" target="_blank">hyunjin912.github.io/portfolio/</a></p>
         </div>
     </div>
 
