--- a/site-webstandard/css/style.css
+++ b/site-webstandard/css/style.css
@@ -2,10 +2,13 @@
 /* 스킵 내비게이션 */
 #skip {position: relative;}
 #skip a {
-    border: 1px solid #fff; background-color: #333; color: #fff; 
-    width: 140px; text-align: center; position: absolute; left: 0px; top: -50px; font-size: 14px; padding: 10px;}
-#skip a:active,
-#skip a:focus {top: 0px;}
+    border: 1px solid #fff; background-color: #333; 
+    color: #fff; position: absolute; left: 0px; top: -50px; 
+    width: 140px; text-align: center; 
+    font-size: 14px; padding: 10px;
+}
+#skip a:active,            
+#skip a:focus {top: 0px;}  /* 탭 버튼 누를 경우 나타남 */
 
 /* 레이아웃 */
 #wrap {width: 100% }
