--- a/port/css/style.css
+++ b/port/css/style.css
@@ -43,14 +43,14 @@ body {
 }
 .header .stitle::before {
     content: '';
-    width: 35.1vw; height: 2.8vw;
+    width: 36vw; height: 2.8vw;
     background: rgba(255,255,255,1);
-    position: absolute; left: 9.6vw; top: 26vw;
+    position: absolute; left: 9.13vw; top: 26.2vw;
     z-index: 1000;
     transform: scaleX(0);
 }
 .header .stitle::before {
-    animation: ani 1s 0.6s ease;
+    animation: ani 1.5s 0.6s ease;
 }
 @keyframes ani {
     from {transform-origin: left; transform: scaleX(0);}
@@ -66,7 +66,7 @@ body {
     position: relative; top: -3.85vw; left: 0;
 }
 .header .content p {
-    margin-top: 13vw;
+    margin-top: 11vw;
     font-size: 1.1vw;
     font-family: 'S-CoreDream-2ExtraLight'; 
 }
@@ -74,5 +74,19 @@ body {
     font-family: 'S-CoreDream-6Bold';
 }
 
+#siteWrap {}
+.site {}
+.site .siteTitle {}
+.site .sTit {}
+.site .siteImg {
+    width: 68vw; height: 38vw;
+    /* width: 1343px; height: 768px; */
+    background: url(../img/webstandard.jpg) no-repeat center center ;
+    background-size: cover;
+}
+.site .siteNum {}
+.site a.viewCodeWrap {}
+.site a.viewCodeWrap .viewCode {}
+.site a.viewCodeWrap .viewtext {}
 
 
