--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -1,26 +1,3 @@
-/* web font */
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap');
-@font-face {
-    font-family: 'S-CoreDream-9Black';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff')
-    format('woff'); font-weight: normal; font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-4Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff')
-    format('woff'); font-weight: normal; font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-2ExtraLight'; 
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') 
-    format('woff'); font-weight: normal; font-style: normal; 
-}
-@font-face { 
-    font-family: 'S-CoreDream-6Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') 
-    format('woff'); font-weight: normal; font-style: normal; 
-}
-
 body {background-color: #1B1B1B;}
 
 /* container */
@@ -58,7 +35,7 @@ body {background-color: #1B1B1B;}
 
 /* all section */
 
-.allsite {
+/* .allsite {
     position: relative;
     overflow-x: hidden;
     padding-top: 15vw;
@@ -77,7 +54,8 @@ body {background-color: #1B1B1B;}
 .allsite .img-wrap img {}
 
 .allsite h2 {
-    font-family: 'S-CoreDream-9Black';
+    font-family: 'Ilisarniq-Black';
+    font-weight: 900;
     font-size: 10vw;
     color: #fff;
     position: absolute; left: 18vw; top: 6vw;
@@ -86,7 +64,7 @@ body {background-color: #1B1B1B;}
     letter-spacing: 3.6px;
 }
 .allsite .num-wrap .num {
-    font-family: 'S-CoreDream-9Black';
+    font-family: 'Ilisarniq-Black';
     font-size: 16vw;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px #fff;
@@ -94,16 +72,19 @@ body {background-color: #1B1B1B;}
     position: absolute; top: 19.5vw; right: -5.6vw;
 }
 .allsite .circle {
-    position: absolute; left: 74vw; top: 40.5vw; 
+    position: absolute; left: 74vw; top: 40.5vw;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 8vw; height: 8vw;
     border: 2px solid rgb(101, 248, 108);
     border-radius: 50%;
-    font-family: 'S-CoreDream-2ExtraLight'; 
-    font-size: 1.9vw;
+    font-family: 'Ilisarniq-Regular'; 
+    font-size: 14px;
+    letter-spacing: 6px;
     color: #fff;
     white-space: nowrap;
-}
+} */
 
+#section2 {}
+.section2 {}
