--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -116,6 +116,7 @@ body {
     position: relative;
     overflow-x: hidden;
     height: 100vh;
+    background: red;
 }
 .section2 {}
 .s2-title {
@@ -156,7 +157,7 @@ h2.ftitle {
     width: 100%; height: 100%;
 }
 .num-wrap {
-    position: absolute; top: 100px; left: 100px;
+    position: absolute; top: 18vw; left: 86vw;
     transform: rotate(90deg);
     width: 23.906vw; height: 24.74vw;
 }
