--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -7,7 +7,7 @@ body {
 /* cursor */
 .cursor {
     position: absolute;
-    width: 300px; height: 300px;
+    width: 15.625vw; height: 15.625vw;
     border-radius: 50%;
     user-select: none;
     pointer-events: none;
@@ -115,7 +115,7 @@ body {
 #section2 {
     position: relative;
     overflow-x: hidden;
-    height: 100vh;
+    height: 200vh;
     background: red;
 }
 .section2 {}
