--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -175,4 +175,52 @@ h2.ftitle {
     -o-text-fill-color: 2px  #292929;
     -o-text-stroke: 2px #292929;
 }
+.s2-desc {
+    position: relative;
+}
+.s2-desc .desc-wrap {
+    position: absolute; top: 36vw; left: 58.5vw;
+    width: 33.854vw;
+    height: 24.583vw;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.s2-desc .desc-wrap ul {
+    width: 27.083vw;
+    margin-top: -5.7vw;
+}
+.s2-desc .desc-wrap ul .desc-title{
+    font-family: 'Ilisarniq-Black';
+    font-size: 1.302vw;
+    margin-bottom: 0.823vw;
+}
+.s2-desc .desc-wrap ul .desc-desc{
+    font-family: 'S-CoreDream-3Light';
+    font-size: 0.781vw;
+    line-height: 1.563vw;
+    color: #1b1b1b;
+    text-align: justify;
+}
+.btn-wrap {
+    position: absolute; top: 53.4vw; left: 61.9vw;
+    display: flex;
+    justify-content: space-between;
+    width: 27.083vw;
+
+}
+.btn-wrap .btn a {
+    font-family: 'Ilisarniq-Regular';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12.813vw;
+    background: #000;
+    padding: 20px 50px;
+    box-sizing: border-box;
+    color: #fff;
+    font-size: 0.938vw;
+    text-transform: uppercase;
+}
 
