--- a/port/font/font.css
+++ b/port/font/font.css
@@ -19,6 +19,11 @@
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') 
     format('woff'); font-weight: normal; font-style: normal; 
 }
+@font-face { 
+    font-family: 'S-CoreDream-3Light';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') 
+    format('woff'); font-weight: normal; font-style: normal; 
+}
 
 /* english */
 @font-face {
